Fixed responsive text, icon overflow on browser. Should be complete

--- a/css/style.css
+++ b/css/style.css
@@ -194,7 +194,7 @@ body {
 		width: 98%;
 		height: 50px;
 		line-height: 40pt;
-		font-size: 16px;
+		font-size: 14px;
 	}
 	.deleteicon, .undoicon, .checkicon {
 		height: 50px;
